changes homepage.html to index.html

--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
     <body>
         <hr color="#ffffff">
         <div class="top">
-            <a href="homepage.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="resources.html">RESOURCES</a>
             <a href="about-us.html">ABOUT</a>
         </div>
