--- a/about-us.html
+++ b/about-us.html
@@ -10,7 +10,7 @@
     <hr color= "ffffff">
     
         <div class= "top">
-            <a href="homepage.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="resources.html">RESOURCES</a>
             <a href="about-us.html">ABOUT</a>
          </div>
